--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -1,11 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.NaviComposeDrawer" parent="android:Theme.Material.Light.NoActionBar" />
-
-    <!-- Creating a custom theme for Splash -->
     <style name="Theme.App.Launch" parent="Theme.SplashScreen">
         <item name="windowSplashScreenBackground">@color/black</item>
         <item name="postSplashScreenTheme">@style/Theme.NaviComposeDrawer</item> <!-- Main App theme-->
+        <item name="windowSplashScreenAnimatedIcon">@drawable/animated_logo</item>
     </style>
 </resources>
