--- a/app/src/main/res/values-v31/themes.xml
+++ b/app/src/main/res/values-v31/themes.xml
@@ -2,8 +2,12 @@
 <resources>
 
     <style name="Theme.App.Launch" parent="Theme.SplashScreen">
-        <item name="windowSplashScreenBackground">@color/black</item>
+        <item name="android:windowSplashScreenBackground">@color/black</item>
         <item name="postSplashScreenTheme">@style/Theme.NaviComposeDrawer</item> <!-- Main App theme-->
-        <item name="windowSplashScreenAnimatedIcon">@drawable/animated_logo</item>
+        <item name="android:windowSplashScreenAnimationDuration">800</item>
+        <item name="android:windowSplashScreenAnimatedIcon">@drawable/animated_logo</item>
     </style>
 </resources>
+
+<!-- Android 12 Initial launch will not show the splash Icon. Its a bug with Android SDK -->
+<!-- https://github.com/apache/cordova-android/issues/1481 -->
